Refactor String.format