@@ -10,7 +10,7 @@ public class DefaultCalendarNotFoundException extends ApplicationException {
 	private static final long serialVersionUID = 1L;
 
 	public DefaultCalendarNotFoundException(int year) {
-		super("Default calendar not found for %d year. ".formatted(year));
+		super(String.format("Default calendar not found for %d year. ", year));
 	}
 
 }
