@@ -39,7 +39,7 @@ public class ExternalTimesheetServiceImpl implements ExternalTimesheetService {
 	public List<WorkingTimePeriod> searchCurrentByEmployeeId(String employeeId) {
 		final String date = LocalDate.now().format(DateTimeFormatter.ofPattern(SERVICE_DATE_FORMAT));
 
-		final List<TimesheetResource> timesheets = timesheetService.search("( employeeId:%s and date:%s )".formatted(employeeId, date), "+date", 1, 1000)
+		final List<TimesheetResource> timesheets = timesheetService.search(String.format("( employeeId:%s and date:%s )", employeeId, date), "+date", 1, 1000)
 				.getItems();
 
 		return CollectionUtils.isEmpty(timesheets) ? new ArrayList<WorkingTimePeriod>()
@@ -51,7 +51,7 @@ public class ExternalTimesheetServiceImpl implements ExternalTimesheetService {
 	public List<Timesheet> searchTimesheetsByEmployeeIdBetweenDates(String startDate, String endDate, String employeeId) {
 
 		final List<TimesheetResource> timesheets = timesheetService
-				.search("( date>%s and date<%s and employeeId:%s )".formatted(startDate, endDate, employeeId), "+date", 1, 1000).getItems();
+				.search(String.format("( date>%s and date<%s and employeeId:%s )", startDate, endDate, employeeId), "+date", 1, 1000).getItems();
 
 		return CollectionUtils.isEmpty(timesheets) ? null : timesheets.stream().map(t -> TimesheetMapper.mapFromResource(t)).collect(Collectors.toList());
 
@@ -61,7 +61,7 @@ public class ExternalTimesheetServiceImpl implements ExternalTimesheetService {
 	public Timesheet searchCurrentTimesheetByEmployeeId(String employeeId) {
 		final String date = LocalDate.now().format(DateTimeFormatter.ofPattern(SERVICE_DATE_FORMAT));
 
-		final List<TimesheetResource> timesheets = timesheetService.search("( employeeId:%s and date:%s )".formatted(employeeId, date), "+date", 1, 1000)
+		final List<TimesheetResource> timesheets = timesheetService.search(String.format("( employeeId:%s and date:%s )", employeeId, date), "+date", 1, 1000)
 				.getItems();
 
 		return CollectionUtils.isEmpty(timesheets) ? null : TimesheetMapper.mapFromResource(CollectionUtils.lastElement(timesheets));
